# learn

./: .gitignore  README.md
c/: CMakeLists.txt  README.md
c/nous/: alignment.c  type.c
c/quest/: dec-def  types.c
c/syntax/: dec-def.c  types
cpp/basic/: ref  ref.cpp
erlang/train/: chat.erl  concurrent.erl
gnu/autotools/: configure.ac
gnu/autotools/autom4te.cache/: output.0  requests  traces.0
gnu/autotools/src/: hello_world.cpp  hello_world.h  main.cpp
gnu/make/: hello  hello.c
go/: main.go
go/train/: tour-exer.go
golang/: Makefile  suc.txt
gradle/: build.gradle
gradle/dest/: myfile.txt
haskell/: haskell.cabal
haskell/algos/: .gitignore  LICENSE  break-chocolate.hs  package.yaml  stack.yaml
haskell/learnyouahaskell/: 04-syntax-in-function.hs  07-module-list.hs
java/algos/: Main.java
java/chats/: ChatManager.java  ChatSocket.java  ChatUser.java  Main.java
java/train/: Album.java  Artist.java  Main.java
javascript/: package.json
javascript/react/: app.js  index.html
kotlin/objs/: Person.kt
kotlin/src/: Main.kt
kotlin/train/: FunctionSet.kt  NumPic.kt
lisp/interp/: easy-interp.rkt  r3-interp.rkt  r3.rkt
lisp/train/: calculator.rkt  contract.rkt  lazy.rkt
python/pp/: .gitignore.swp  7-12.txt  dataset220201209.xlsx  goodsmatch.py  k.py  lottery.py  mangood.py  product220201202.xlsx
python/syntax/: main.py
racket/interpreters/: #easy-interp.rkt#1#  #match.rkt#1#  arithmetics.rkt  calculator.rkt  easy-interp.rkt  r3.rkt
racket/tapi/: base.rkt
racket/train/: carlo.rkt  listee.rkt  lister.rkt
ruby/src/: hello.rb
(+248 files in other folders)
